Fix white space at top of page

--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ ul.quote-list {
     flex-flow: column nowrap;
     background-color: #DDD0C8;
     color:  #323232;
-    margin-top: 32px;
 }
 
 .hero-contents, .quote-panel, .sign-up-panel, #img-panel {
